--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
            
             <div style="height: 50vh;text-align:center;background:url(./bg.jpg); background-size:cover;max-width:100%;"></div>
             <button onclick="playSound()" STYLE="width:100%; padding:20px;background-color:red;">PLAY DA FAKEN TUNE</button>
-            <img src="img/1.jpg" alt="" class="animate-on-scroll">
+            <img src="img/1.jpg" alt="" class="">
             <img src="img/2.jpg" alt="" class="animate-on-scroll">
             <img src="img/3.jpg" alt="" class="animate-on-scroll">
             <img src="img/4.jpg" alt="" class="animate-on-scroll">
