--- a/index.html
+++ b/index.html
@@ -28,17 +28,14 @@
 	<body class="demo-6" onload="playSound()">
 		<main>
 			<div class="frame">
-				<div class="frame__title"> 
-					<h1 class="frame__title-main">JADOS</h1> 
-					<a aria-label="Back to the article" class="frame__title-back" href="#"> 
-						<span class="oh__inner" style=""></span> 
-						<svg width="18px" height="18px" viewBox="0 0 24 24"><path vector-effect="non-scaling-stroke" fill="#fff" d="M18.25 15.5a.75.75 0 00.75-.75v-9a.75.75 0 00-.75-.75h-9a.75.75 0 000 1.5h7.19L6.22 16.72a.75.75 0 101.06 1.06L17.5 7.56v7.19c0 .414.336.75.75.75z"></path>
-						</svg>
+				<div class="frame__title" style="margin:0 auto;"> 
+					<h1 class="frame__title-main">$JADOS</h1> 
+
 					</a>
 					<div style="padding:0 10px; ">
-						<a href="https://x.com/jados_sol?s=21" style="color:white;padding:0 20px;">X</a>
-						<a href="https://t.me/JustAnotherDayOnSolana" style="color:white;padding:0 20px;">Telegram</a>
-						<a href="#" onclick="playSound()" style="color:white;padding:0 20px;">Play da tune</a>
+						<a href="https://x.com/jados_sol?s=21" style="color:white;padding:0 10px;">X</a>
+						<a href="https://t.me/JustAnotherDayOnSolana" style="color:white;padding:0 10px;">Telegram</a>
+						<a href="#" onclick="playSound()" style="color:white;padding:0 10px;">Play da tune</a>
 					</div>
 					
 				</div>
