--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 				
 						<div class="" style="margin:0 auto; padding:10px;">
 							<a href="/tokenomics.html"><button style="padding:15px;background-color:purple;color:white;border-radius:15px;">Tokenomics</button></a>
-							<a href="https://raydium.io/" target="_blank"><button style="padding:15px;background-color:purple;color:white;border-radius:15px;">Raydium</button></a>
-							<a href="#"><button style="padding:15px;background-color:purple;color:white;border-radius:15px;">How to Buy</button></a>
+							<a href="https://raydium.io/swap/?inputCurrency=F9YehCMjZEdvuTgo2LXg7wT287YFhqwNFPjqcvBASRmz&outputCurrency=So11111111111111111111111111111111111111112&fixed=in" target="_blank"><button style="padding:15px;background-color:purple;color:white;border-radius:15px;">Raydium</button></a>
+							<a href="https://dexscreener.com/solana/F9YehCMjZEdvuTgo2LXg7wT287YFhqwNFPjqcvBASRmz"><button style="padding:15px;background-color:purple;color:white;border-radius:15px;">Dex</button></a>
 						</div>
 
 			</div>
@@ -59,7 +59,7 @@
 		</div>
 		
 		<audio autoplay>
-			<source src="../JADOS.mp3" type="audio/mpeg">
+			<source src="JADOS.mp3" type="audio/mpeg">
 		</audio>
 		
 		<script src="js/gsap.min.js"></script>
@@ -74,6 +74,7 @@
                 audio.pause();
                 audio.currentTime = 0;
             }
+
             audio.play();
             isPlaying = true;
         }
