--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<div class="" style="margin:0 auto; padding:10px;">
 							<a href="/tokenomics.html"><button style="padding:15px;background-color:purple;color:white;border-radius:15px;">Tokenomics</button></a>
 							<a href="https://raydium.io/swap/?inputCurrency=F9YehCMjZEdvuTgo2LXg7wT287YFhqwNFPjqcvBASRmz&outputCurrency=So11111111111111111111111111111111111111112&fixed=in" target="_blank"><button style="padding:15px;background-color:purple;color:white;border-radius:15px;">Raydium</button></a>
-							<a href="https://dexscreener.com/solana/F9YehCMjZEdvuTgo2LXg7wT287YFhqwNFPjqcvBASRmz"><button style="padding:15px;background-color:purple;color:white;border-radius:15px;">Dex</button></a>
+							<a href="https://dexscreener.com/solana/F9YehCMjZEdvuTgo2LXg7wT287YFhqwNFPjqcvBASRmz"><button style="padding:15px;background-color:purple;color:white;border-radius:15px;">Dex - Chart</button></a>
 						</div>
 
 			</div>
