--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 		<main>
 			<div class="frame">
 				<div class="frame__title" style="margin:0 auto;"> 
-					<h1 class="frame__title-main">$JADOS</h1> 
-
+					<a href="/">
+						<h1 class="frame__title-main">$JADOS</h1> 
 					</a>
 					<div style="padding:0 10px; ">
 						<a href="https://x.com/jados_sol?s=21" style="color:white;padding:0 10px;">X</a>
