--- a/tokenomics.html
+++ b/tokenomics.html
@@ -29,8 +29,8 @@
 		<main>
 			<div class="frame">
 				<div class="frame__title" style="margin:0 auto;"> 
-					<h1 class="frame__title-main">$JADOS</h1> 
-
+					<a href="/">
+						<h1 class="frame__title-main">$JADOS</h1> 
 					</a>
 					<div style="padding:0 10px; ">
 						<a href="https://x.com/jados_sol?s=21" style="color:white;padding:0 10px;">X</a>
@@ -42,9 +42,10 @@
 				
 				<div class="" style="margin:0 auto; padding:10px;">
 					<a href="/tokenomics.html"><button style="padding:15px;background-color:purple;color:white;border-radius:15px;">Tokenomics</button></a>
-					<a href="https://raydium.io/" target="_blank"><button style="padding:15px;background-color:purple;color:white;border-radius:15px;">Raydium</button></a>
-					<a href="#"><button style="padding:15px;background-color:purple;color:white;border-radius:15px;">How to Buy</button></a>
+					<a href="https://raydium.io/swap/?inputCurrency=F9YehCMjZEdvuTgo2LXg7wT287YFhqwNFPjqcvBASRmz&outputCurrency=So11111111111111111111111111111111111111112&fixed=in" target="_blank"><button style="padding:15px;background-color:purple;color:white;border-radius:15px;">Raydium</button></a>
+					<a href="https://dexscreener.com/solana/F9YehCMjZEdvuTgo2LXg7wT287YFhqwNFPjqcvBASRmz"><button style="padding:15px;background-color:purple;color:white;border-radius:15px;">Dex - Chart</button></a>
 				</div>
+
 			</div>
 			<div class="content">
 				<!-- <h2><i>J</i>A<i>D</i>OS</h2>
