--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<div class="frame">
 				<div class="frame__title" style="margin:0 auto;"> 
 					<a href="/">
-						<h1 class="frame__title-main">$JADOS</h1> 
+						<h1 class="frame__title-main" style="color:white;">$JADOS</h1> 
 					</a>	
 					<div style="padding:0 10px; ">
 						<a href="https://x.com/jados_sol?s=21" style="color:white;padding:0 10px;">X</a>
